@@ -1341,6 +1341,11 @@ $user: User the list is being fetched for
 &$list: List object (defaults to NULL, change it to an object instance and
   return false override the list derivative used)
 
+'FetchUserIdsByEmailAddr': When fetching user ids by email addresses in User::newFromEmail.
+For third party authentication extensions which control email addresses seperately like CentralAuth.
+$email: Email address to find a user
+&ids: Array of user ids (default value: empty array)
+
 'FileDeleteComplete': When a file is deleted.
 $file: reference to the deleted file
 $oldimage: in case of the deletion of an old image, the name of the old file
