@@ -43,6 +43,7 @@ class LoginForm extends SpecialPage {
 	const NEED_TOKEN = 12;
 	const WRONG_TOKEN = 13;
 	const USER_MIGRATED = 14;
+	const WRONG_INPUT = 15;
 
 	public static $statusCodes = array(
 		self::SUCCESS => 'success',
@@ -60,6 +61,7 @@ class LoginForm extends SpecialPage {
 		self::NEED_TOKEN => 'need_token',
 		self::WRONG_TOKEN => 'wrong_token',
 		self::USER_MIGRATED => 'user_migrated',
+		self::WRONG_INPUT => 'wrong_input',
 	);
 
 	/**
@@ -705,7 +707,7 @@ class LoginForm extends SpecialPage {
 	 * @return int
 	 */
 	public function authenticateUserData() {
-		global $wgUser, $wgAuth;
+		global $wgUser, $wgAuth, $wgEmailAuthentication, $wgEnableEmailLogin;
 
 		$this->load();
 
@@ -768,9 +770,30 @@ class LoginForm extends SpecialPage {
 			return self::ILLEGAL;
 		}
 
+		// Try with email (T30085)
+		$useEmailLogin = $wgEmailAuthentication && $wgEnableEmailLogin && Sanitizer::validateEmail( $this->mUsername );
+		if ( $useEmailLogin ) {
+			$us = User::newFromEmail( strtolower( $this->mUsername ) );
+			if ( $us !== false ) {
+				$aus = array_filter( $us, function( $user ) {
+					return $user->isEmailConfirmed();
+				} );
+				if ( count( $aus ) === 1 ) {
+					$u = $aus[0];
+				}
+			}
+		}
+
+		// Check password every time even user doesn't exists to mitigate timing attacks about emails (T30085)
+		$password = $u->checkPassword( $this->mPassword );
+		if ( !$password && $useEmailLogin ) {
+			// PasswordFactory::newFromPlainText() costs the (almost) same time as User::checkPassword()
+			User::getPasswordFactory()->newFromPlainText( 'dummy' );
+		}
+
 		$isAutoCreated = false;
 		if ( $u->getID() == 0 ) {
-			$status = $this->attemptAutoCreate( $u );
+			$status = $this->attemptAutoCreate( $u, $useEmailLogin );
 			if ( $status !== self::SUCCESS ) {
 				return $status;
 			} else {
@@ -789,7 +812,7 @@ class LoginForm extends SpecialPage {
 		}
 
 		global $wgBlockDisablesLogin;
-		if ( !$u->checkPassword( $this->mPassword ) ) {
+		if ( !$password ) {
 			if ( $u->checkTemporaryPassword( $this->mPassword ) ) {
 				/**
 				 * The e-mailed temporary password should not be used for actu-
@@ -821,7 +844,12 @@ class LoginForm extends SpecialPage {
 				$this->mTempPasswordUsed = true;
 				$retval = self::RESET_PASS;
 			} else {
-				$retval = ( $this->mPassword == '' ) ? self::EMPTY_PASS : self::WRONG_PASS;
+				if ( $useEmailLogin ) {
+					// To mitigate brute-force attacks for email addresses.
+					$retval = self::WRONG_INPUT;
+				} else {
+					$retval = ( $this->mPassword == '' ) ? self::EMPTY_PASS : self::WRONG_PASS;
+				}
 			}
 		} elseif ( $wgBlockDisablesLogin && $u->isBlocked() ) {
 			// If we've enabled it, make it so that a blocked user cannot login
@@ -907,10 +935,11 @@ class LoginForm extends SpecialPage {
 	 * is an external authentication method which allows it.
 	 *
 	 * @param User $user
+	 * @param bool $useEmailLogin
 	 *
 	 * @return int Status code
 	 */
-	function attemptAutoCreate( $user ) {
+	function attemptAutoCreate( $user, $useEmailLogin ) {
 		global $wgAuth;
 
 		if ( $this->getUser()->isBlockedFromCreateAccount() ) {
@@ -920,13 +949,13 @@ class LoginForm extends SpecialPage {
 		}
 
 		if ( !$wgAuth->autoCreate() ) {
-			return self::NOT_EXISTS;
+			return $useEmailLogin ? self::WRONG_INPUT : self::NOT_EXISTS;
 		}
 
 		if ( !$wgAuth->userExists( $user->getName() ) ) {
 			wfDebug( __METHOD__ . ": user does not exist\n" );
 
-			return self::NOT_EXISTS;
+			return $useEmailLogin ? self::WRONG_INPUT : self::NOT_EXISTS;
 		}
 
 		if ( !$wgAuth->authenticate( $user->getName(), $this->mPassword ) ) {
@@ -1081,6 +1110,14 @@ class LoginForm extends SpecialPage {
 					$params = $this->mAbortLoginErrorMsg;
 				}
 				$this->mainLoginForm( $this->msg( $error, $params )->text() );
+				break;
+			case self::WRONG_INPUT:
+				$msg = $this->msg( $this->mAbortLoginErrorMsg ?: 'loginfail-wronginput' )->text();
+				if ( $this->getUser()->isAllowed( 'createaccount' ) ) {
+					$msg .= ' ';
+					$msg .= $this->msg( 'loginfail-createaccount' )->parse();
+				}
+				$this->mainLoginForm( $msg );
 				break;
 			default:
 				throw new MWException( 'Unhandled case value' );
