@@ -385,6 +385,8 @@
 	"welcomeuser": "Welcome, $1!",
 	"welcomecreation-msg": "Your account has been created.\nYou can change your {{SITENAME}} [[Special:Preferences|preferences]] if you wish.",
 	"yourname": "Username:",
+	"userlogin-yourname-youremail": "Username or email address",
+	"userlogin-yourname-youremail-ph": "Enter your username or your email address",
 	"userlogin-yourname": "Username",
 	"userlogin-yourname-ph": "Enter your username",
 	"createacct-another-username-ph": "Enter the username",
@@ -461,6 +463,8 @@
 	"noname": "You have not specified a valid username.",
 	"loginsuccesstitle": "Login successful",
 	"loginsuccess": "<strong>You are now logged in to {{SITENAME}} as \"$1\".</strong>",
+	"loginfail-wronginput": "Incorrect username, email address or password. Or maybe the email address is not authenticated or connected to multiple accounts. Usernames are case sensitive, while email addresses are case insensitive.",
+	"loginfail-createaccount": "You can [[Special:UserLogin/signup|create a new account]].",
 	"nosuchuser": "There is no user by the name \"$1\".\nUsernames are case sensitive.\nCheck your spelling, or [[Special:UserLogin/signup|create a new account]].",
 	"nosuchusershort": "There is no user by the name \"$1\".\nCheck your spelling.",
 	"nouserspecified": "You have to specify a username.",
