@@ -558,6 +558,8 @@
 	"welcomeuser": "Text for a welcome heading that users see after registering a user account.\n\nParameters:\n* $1 - the username of the new user. See [[phab:T44215]]",
 	"welcomecreation-msg": "A welcome message users see after registering a user account, following a welcomeuser heading.\n\nParameters:\n* $1 - (Unused) the username of the new user.\n\nReplaces [[MediaWiki:welcomecreation|welcomecreation]] in 1.21wmf5, see [[phab:T44215]]",
 	"yourname": "Since 1.22 no longer used in core, but used by some extensions.\n{{Identical|Username}}",
+	"userlogin-yourname-youremail": "In user login forms, label for username or email address field.\n\nSee example: [[Special:UserLogin]]",
+	"userlogin-yourname-youremail-ph": "Placeholder text in user login form field.\n\nSee example: [[Special:UserLogin]]",
 	"userlogin-yourname": "In user login & create account forms, label for username field.\n{{doc-important|<nowiki>{{</nowiki>[[Gender|GENDER]]<nowiki>}}</nowiki> is '''NOT''' supported.}}\n\nSee examples: [[Special:UserLogin]] and [{{canonicalurl:Special:UserLogin|type=signup}} Special:UserLogin?type=signup]\n{{Identical|Username}}",
 	"userlogin-yourname-ph": "Placeholder text in login & create account form field.\n\nSee example: [[Special:UserLogin]] and [{{canonicalurl:Special:UserLogin|type=signup}} Special:UserLogin?type=signup]",
 	"createacct-another-username-ph": "Placeholder text in create account form field when one user creates an account for another.",
@@ -634,6 +636,8 @@
 	"noname": "Error message.",
 	"loginsuccesstitle": "The title of the page saying that you are logged in. The content of the page is the message {{msg-mw|Loginsuccess}}.\n{{Identical|Login successful}}",
 	"loginsuccess": "The content of the page saying that you are logged in. The title of the page is {{msg-mw|Loginsuccesstitle}}.\n\nParameters:\n* $1 - the name of the logged in user\n{{Gender}}",
+	"loginfail-wronginput": "Displayed when trying to log in with an unexisting username or an email address, or with wrong password.",
+	"loginfail-createaccount": "Create account link. Displayed in log in page.",
 	"nosuchuser": "Displayed when trying to log in with an unexisting username.\n\nWhen you are not allowed to create an account, the following message is displayed:\n* {{msg-mw|Nosuchusershort}}\nParameters:\n* $1 - username",
 	"nosuchusershort": "Displayed when trying to log in with a non-existent username.\n\nThis message is only shown when you can't create an account, otherwise the following message is displayed:\n* {{msg-mw|Nosuchusershort}}\n\nParameters:\n* $1 - username",
 	"nouserspecified": "Used as error message when username to fetch is not specified.",
